--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     
     <i class="fa-brands fa-500px"></i>
+    <p> hello bro </p>
 
     <!--   Script Src   -->
     <script src="script.js "></script>
