--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     
     <i class="fa-brands fa-500px"></i>
-    <p> hello bro </p>
+    <h1> Hello bro! How are you? </h1>
 
     <!--   Script Src   -->
     <script src="script.js "></script>
