--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
-    
+    <div class="not-load">if quote not load
+        <a href="https://cors-anywhere.herokuapp.com/"  target="_blank"> CLICK HERE</a>
+    </div>
     <div class="quote_container" id="quote_container">
 
         <div class="quote_text">
